--- a/tvcust/src/main/res/layout/activity_reqdescribe.xml
+++ b/tvcust/src/main/res/layout/activity_reqdescribe.xml
@@ -23,38 +23,82 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/showingroup"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/lay_reqfix_card"
+        <LinearLayout
+            android:id="@+id/showingroup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="0dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/lay_reqfix_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                app:cardCornerRadius="0dp"
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:foreground="?attr/selectableItemBackground"
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:id="@+id/lay_reqfix_selectuser"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:foreground="?attr/selectableItemBackground"
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/lay_reqfix_selectuser"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="60dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal"
+                                android:paddingLeft="16dp"
+                                android:paddingRight="16dp">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="申请技术协助"
+                                    android:textColor="@color/sb_text_blank_deep_light"
+                                    android:textSize="@dimen/text_big_nomal" />
+
+                                <View
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1" />
+
+                                <TextView
+                                    android:id="@+id/text_user_name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="选择协助人员"
+                                    android:textColor="@color/sb_blue"
+                                    android:textSize="@dimen/text_big_nomal" />
+
+                            </LinearLayout>
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1px"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp"
+                                android:background="@drawable/line" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/lay_reqfix_selectcoper"
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:gravity="center_vertical"
@@ -65,7 +109,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="申请技术协助"
+                                android:text="抄送(非必选)"
                                 android:textColor="@color/sb_text_blank_deep_light"
                                 android:textSize="@dimen/text_big_nomal" />
 
@@ -75,162 +119,125 @@
                                 android:layout_weight="1" />
 
                             <TextView
-                                android:id="@+id/text_user_name"
+                                android:id="@+id/text_coper_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="选择协助人员"
+                                android:text="选择抄送人员"
                                 android:textColor="@color/sb_blue"
                                 android:textSize="@dimen/text_big_nomal" />
 
                         </LinearLayout>
 
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1px"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:background="@drawable/line"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/lay_reqfix_selectcoper"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="抄送(非必选)"
-                            android:textColor="@color/sb_text_blank_deep_light"
-                            android:textSize="@dimen/text_big_nomal" />
-
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1" />
-
-                        <TextView
-                            android:id="@+id/text_coper_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="选择抄送人员"
-                            android:textColor="@color/sb_blue"
-                            android:textSize="@dimen/text_big_nomal" />
-
                     </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:orientation="vertical">
-
-            <com.sobey.common.view.EmojiEditText
-                android:id="@+id/edit_reqfix_detail"
-                style="@style/edit_hidden"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:gravity="top"
-                android:hint="输入您问题的描述"
-                android:inputType="textMultiLine"
-                android:maxLength="254"
-                android:minLines="8" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="right|center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/img_reqfix_photo"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:scaleType="center"
-                    android:src="@drawable/reqfix_photo" />
+                <com.sobey.common.view.EmojiEditText
+                    android:id="@+id/edit_reqfix_detail"
+                    style="@style/edit_hidden"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_margin="16dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:gravity="top"
+                    android:hint="输入您问题的描述"
+                    android:inputType="textMultiLine"
+                    android:maxLength="254"
+                    android:minLines="8" />
 
-                <ImageView
-                    android:id="@+id/img_reqfix_vidio"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:scaleType="center"
-                    android:src="@drawable/reqfix_video" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/line" />
 
-                <ImageView
-                    android:id="@+id/img_reqfix_voice"
-                    android:layout_width="40dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:scaleType="center"
-                    android:src="@drawable/reqfix_voice" />
+                    android:gravity="right|center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/img_reqfix_photo"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="5dp"
+                        android:scaleType="center"
+                        android:src="@drawable/reqfix_photo" />
+
+                    <ImageView
+                        android:id="@+id/img_reqfix_vidio"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="5dp"
+                        android:scaleType="center"
+                        android:src="@drawable/reqfix_video" />
+
+                    <ImageView
+                        android:id="@+id/img_reqfix_voice"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="5dp"
+                        android:scaleType="center"
+                        android:src="@drawable/reqfix_voice" />
+                </LinearLayout>
+
             </LinearLayout>
+
+            <com.sobey.common.view.BundleView2
+                android:id="@+id/bundle_reqfix"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1" />
+
+            <!--<TextView-->
+            <!--android:id="@+id/btn_go"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:background="@color/sb_bk_dark"-->
+            <!--android:gravity="center"-->
+            <!--android:text="问题提交"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="@dimen/text_big" />-->
+
+            <com.dd.CircularProgressButton
+                android:id="@+id/btn_go"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="#00000000"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big"
+                app:cpb_colorIndicator="@color/sb_blue"
+                app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
+                app:cpb_colorProgress="#00000000"
+                app:cpb_iconComplete="@drawable/ic_action_accept"
+                app:cpb_iconError="@drawable/ic_action_cancel"
+                app:cpb_selectorIdle="@drawable/idle_state_selector"
+                app:cpb_textIdle="提交" />
 
         </LinearLayout>
 
-        <com.sobey.common.view.BundleView2
-            android:id="@+id/bundle_reqfix"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1" />
-
-        <!--<TextView-->
-        <!--android:id="@+id/btn_go"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_marginBottom="10dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:background="@color/sb_bk_dark"-->
-        <!--android:gravity="center"-->
-        <!--android:text="问题提交"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="@dimen/text_big" />-->
-
-        <com.dd.CircularProgressButton
-            android:id="@+id/btn_go"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:background="#00000000"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_big"
-            app:cpb_colorIndicator="@color/sb_blue"
-            app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
-            app:cpb_colorProgress="#00000000"
-            app:cpb_iconComplete="@drawable/ic_action_accept"
-            app:cpb_iconError="@drawable/ic_action_cancel"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
-            app:cpb_textIdle="提交" />
-
-    </LinearLayout>
+    </ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
