--- a/tvcust/src/main/res/layout/activity_infodetail.xml
+++ b/tvcust/src/main/res/layout/activity_infodetail.xml
@@ -42,9 +42,10 @@
 
             <ProgressBar
                 android:id="@+id/progress"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@style/tallerBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="5px" />
+
 
         </FrameLayout>
 
