--- a/tvcust/src/main/res/layout/activity_web.xml
+++ b/tvcust/src/main/res/layout/activity_web.xml
@@ -40,7 +40,7 @@
 
             <ProgressBar
                 android:id="@+id/progress"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@style/tallerBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="5px" />
 
