--- a/tvcust/src/main/res/layout/tab.xml
+++ b/tvcust/src/main/res/layout/tab.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="全部"
         android:textColor="@drawable/color_tab_text"
-        android:textSize="@dimen/text_nomal">
+        android:textSize="@dimen/text_nomal"
+        android:id="@+id/textView">
 
     </TextView>
 
     <TextView
+        android:layout_gravity="top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textColor="@drawable/color_tab_text"
-        android:textSize="14sp"
-        android:text="0"/>
+        android:textColor="@color/white"
+        android:background="@drawable/bk_hot"
+        android:padding="1px"
+        android:textSize="10sp"
+        android:text=""
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
 
-</LinearLayout>
+</RelativeLayout>
