--- a/tvcust/src/main/res/layout/activity_login.xml
+++ b/tvcust/src/main/res/layout/activity_login.xml
@@ -5,12 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/login_bk"
     tools:context="com.sobey.tvcust.ui.activity.LoginActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <com.flaviofaria.kenburnsview.KenBurnsView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/login_bk" />
 
         <ImageView
             android:layout_width="wrap_content"
