--- a/tvcust/src/main/res/layout/fragment_regist_detail.xml
+++ b/tvcust/src/main/res/layout/fragment_regist_detail.xml
@@ -209,7 +209,7 @@
                         android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:gravity="center"
-                        android:text="客户注册"/>
+                        android:text="用户注册"/>
 
                     <TextView
                         android:id="@+id/text_registdetail_select_employ"
