--- a/tvcust/src/main/res/layout/tab.xml
+++ b/tvcust/src/main/res/layout/tab.xml
@@ -17,6 +17,7 @@
     </TextView>
 
     <TextView
+        android:visibility="gone"
         android:layout_gravity="top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +27,7 @@
         android:background="@drawable/bk_hot"
         android:padding="1px"
         android:textSize="10sp"
-        android:text=""
+        android:text="0"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/textView"
         android:layout_toEndOf="@+id/textView" />
